<resources>
    <string name="app_name">Split Screen Tron</string>
    <string name="app_name_caps">SPLIT SCREEN TRON</string>
    <string name="title_activity_practice_game">PracticeGameActivity</string>

    <!-- Multiplayer Text -->
    <string name="start_prompt">Touch the screen to start</string>
    <string name="resume_prompt">Touch the screen to resume</string>
    <string name="new_game_prompt">Touch the screen to create a new game</string>

    <string name="countdown_ready">Ready</string>
    <string name="countdown_set">Set</string>
    <string name="countdown_go">Go</string>
    <string name="countdown_wait">Preparing</string>

    <string name="info_button">INFO</string>
    <string name="replay_button">replay</string>

    <!-- Home Activity Text -->
    <string name="home_activity_play_game">Play Game</string>
    <string name="home_activity_how_to_play">How to Play</string>
    <string name="home_activity_rules">Rules</string>
    <string name="home_activity_settings">Settings</string>

    <string name="home_activity_play_dialog_title">Select Number of Players</string>
    <string name="home_activity_play_dialog_negative_button">Cancel</string>

    <string name="home_activity_rules_dialog_description">
        1) Cycles can\'t stop moving once they\'ve started.\n\n
        2) Cycles can\'t move backwards.\n\n
        3) Cycles can only change direction to its left or right.\n\n
        4) As each cycle moves, they leave behind a path in their color.\n\n
        5) If a player collides with a path, cycle, or goes outside the grid, they lose.\n\n
        6) The last player remaining wins.\n\n
    </string>
    
    <string name="home_activity_how_to_play_dialog_description">
        1) Position the device parallel to the floor.\n\n
        2) Player 1 is red, 2 is green, 3 is yellow, and 4 is Magenta.\n\n
        3) Place yourself near the edge of the screen where your color appears.\n\n
        4) Swipe a finger on the touch screen towards the direction they want to move.\n\n
        5) Swipe as close to your edge of the screen as possible.\n\n\t\t
        Large Screens recommended for three and four player modes.
    </string>

    <!-- Pause Dialog -->
    <string name="multiplayer_activity_pause_dialog_title">Exit Game</string>
    <string name="multiplayer_activity_pause_dialog_message">Are you sure you want to leave the game?</string>
    <string name="multiplayer_activity_pause_dialog_negative_button">Leave</string>
    <string name="multiplayer_activity_pause_dialog_positive_button">Stay</string>

    <!-- Results Dialog -->
    <string name="results_title">Results</string>
    <string name="results_play_again">Play Again</string>
    <string name="results_watch_replay">Watch Replay</string>
    <string name="results_save_replay">Save Replay</string>
    <string name="results_exit">Close</string>

    <!-- Settings Activity -->
    <string name="pref_background_music_key">pref_background_music</string>
    <string name="pref_sound_effects_key">pref_sound_effects</string>
    <string name="pref_touch_indicators_key">pref_touch_indicators</string>
    <string name="pref_speed_key">pref_speed</string>
    <string name="pref_grid_width_key">pref_grid_width</string>
    <string name="pref_grid_height_key">pref_grid_height</string>
    <string name="pref_credits_key">pref_credits</string>

    <string name="pref_background_music_title">Disable background music.</string>
    <string name="pref_background_music_sum_on">Background music is disabled.</string>
    <string name="pref_background_music_sum_off">Background music is enabled.</string>
    <string name="pref_background_music_default">false</string>

    <string name="pref_sound_effects_title">Disable sound effects.</string>
    <string name="pref_sound_effects_sum_on">Sound effects are disabled.</string>
    <string name="pref_sound_effects_sum_off">Sound effects are enabled.</string>
    <string name="pref_sound_effects_default">false</string>

    <string name="pref_touch_indicators_title">Disable touch boundaries.</string>
    <string name="pref_touch_indicators_sum_on">Touch boundaries are disabled.</string>
    <string name="pref_touch_indicators_sum_off">Touch boundaries are enabled.</string>
    <string name="pref_touch_indicators_default">false</string>

    <string name="pref_speed_title">Change cycle speed.</string>
    <string name="pref_speed_sum">Change the speed of the cycles. Speed in measured in tiles per second.</string>
    <string name="pref_speed_default">3</string>

    <string name="pref_grid_width_title">Set map width.</string>
    <string name="pref_grid_width_sum">Set the horizontal width of the map. Width is measured in tiles.</string>
    <string name="pref_grid_width_default">11</string>

    <string name="pref_grid_height_title">Set map height.</string>
    <string name="pref_grid_height_sum">The vertical height of the map. Height is measured in tiles.</string>
    <string name="pref_grid_height_default">11</string>

    <string name="pref_credits_title">Credits</string>

    <!-- CreditsActivity -->

    <string name="link1"><a href="http://opengameart.org/content/2d-spaceship-10">Skorpio</a></string>

    <string name="link2"><a href="http://opengameart.org/content/battle-the-outsiders">Eddie Hoyt</a></string>
    <string name="link3"><a href="http://opengameart.org/content/8-bit-music-pack-loopable">RevampedPRO</a></string>

    <string name="link4"><a href="http://opengameart.org/content/level-up-sound-effects">Bart Kelsey</a></string>
    <string name="link5"><a href="http://opengameart.org/content/countdown">Destructavator</a></string>
    <string name="link6"><a href="http://opengameart.org/content/8-bit-sound-effects-library">Little Robot Sound Factory</a></string>
    <string name="link7"><a href="http://opengameart.org/content/car-tire-squeal-skid-loop">Tom Haigh</a></string>

    <string name="credits_title">Credits</string>
    <string name="credits_art">Art</string>
    <string name="credits_music">Music</string>
    <string name="credits_sound_effects">Sound effects</string>
    <string name="credits_testers">Testers</string>

    <string name="bella">Bella</string>
    <string name="jj">JJ</string>
    <string name="maritza">Maritza</string>

</resources>
