<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/credits_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/credits_art"/>

    <TextView
        android:id="@+id/link1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/credits_horizontal_padding"
        android:paddingStart="@dimen/credits_horizontal_padding"
        android:paddingEnd="@dimen/credits_horizontal_padding"
        android:paddingRight="@dimen/credits_horizontal_padding"
        android:paddingBottom="@dimen/credits_vertical_padding"
        android:paddingTop="@dimen/credits_vertical_padding"
        android:text="@string/link1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/credits_music"/>

    <TextView
        android:id="@+id/link2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/credits_horizontal_padding"
        android:paddingStart="@dimen/credits_horizontal_padding"
        android:paddingEnd="@dimen/credits_horizontal_padding"
        android:paddingRight="@dimen/credits_horizontal_padding"
        android:paddingBottom="@dimen/credits_vertical_padding"
        android:paddingTop="@dimen/credits_vertical_padding"
        android:text="@string/link2"/>

    <TextView
        android:id="@+id/link3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/credits_horizontal_padding"
        android:paddingStart="@dimen/credits_horizontal_padding"
        android:paddingEnd="@dimen/credits_horizontal_padding"
        android:paddingRight="@dimen/credits_horizontal_padding"
        android:paddingBottom="@dimen/credits_vertical_padding"
        android:paddingTop="@dimen/credits_vertical_padding"
        android:text="@string/link3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/credits_sound_effects"/>

    <TextView
        android:id="@+id/link4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/credits_horizontal_padding"
        android:paddingStart="@dimen/credits_horizontal_padding"
        android:paddingEnd="@dimen/credits_horizontal_padding"
        android:paddingRight="@dimen/credits_horizontal_padding"
        android:paddingBottom="@dimen/credits_vertical_padding"
        android:paddingTop="@dimen/credits_vertical_padding"
        android:text="@string/link4"/>

    <TextView
        android:id="@+id/link5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/credits_horizontal_padding"
        android:paddingStart="@dimen/credits_horizontal_padding"
        android:paddingEnd="@dimen/credits_horizontal_padding"
        android:paddingRight="@dimen/credits_horizontal_padding"
        android:paddingBottom="@dimen/credits_vertical_padding"
        android:paddingTop="@dimen/credits_vertical_padding"
        android:text="@string/link5"/>

    <TextView
        android:id="@+id/link6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/credits_horizontal_padding"
        android:paddingStart="@dimen/credits_horizontal_padding"
        android:paddingEnd="@dimen/credits_horizontal_padding"
        android:paddingRight="@dimen/credits_horizontal_padding"
        android:paddingBottom="@dimen/credits_vertical_padding"
        android:paddingTop="@dimen/credits_vertical_padding"
        android:text="@string/link6"/>

    <TextView
        android:id="@+id/link7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/credits_horizontal_padding"
        android:paddingStart="@dimen/credits_horizontal_padding"
        android:paddingEnd="@dimen/credits_horizontal_padding"
        android:paddingRight="@dimen/credits_horizontal_padding"
        android:paddingBottom="@dimen/credits_vertical_padding"
        android:paddingTop="@dimen/credits_vertical_padding"
        android:text="@string/link7"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/credits_testers"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/credits_horizontal_padding"
        android:paddingStart="@dimen/credits_horizontal_padding"
        android:paddingEnd="@dimen/credits_horizontal_padding"
        android:paddingRight="@dimen/credits_horizontal_padding"
        android:paddingBottom="@dimen/credits_vertical_padding"
        android:paddingTop="@dimen/credits_vertical_padding"
        android:text="@string/bella"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/credits_horizontal_padding"
        android:paddingStart="@dimen/credits_horizontal_padding"
        android:paddingEnd="@dimen/credits_horizontal_padding"
        android:paddingRight="@dimen/credits_horizontal_padding"
        android:paddingBottom="@dimen/credits_vertical_padding"
        android:paddingTop="@dimen/credits_vertical_padding"
        android:text="@string/jj"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/credits_horizontal_padding"
        android:paddingStart="@dimen/credits_horizontal_padding"
        android:paddingEnd="@dimen/credits_horizontal_padding"
        android:paddingRight="@dimen/credits_horizontal_padding"
        android:paddingBottom="@dimen/credits_vertical_padding"
        android:paddingTop="@dimen/credits_vertical_padding"
        android:text="@string/maritza"/>

</LinearLayout>