<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/home_activity_vertical_margin"
    android:paddingLeft="@dimen/home_activity_horizontal_margin"
    android:paddingRight="@dimen/home_activity_horizontal_margin"
    android:paddingTop="@dimen/home_activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.HomeActivity"
    tools:showIn="@layout/activity_home">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name_caps"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/home_activity_title_text_size"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>

    <com.yckir.cyclebattledemo.views.squareView.SquareView
        android:id="@+id/logo"
        android:background="@drawable/long_cycle_background"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_margin="@dimen/button_margin"/>

    <LinearLayout
        android:id="@+id/home_buttons"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/play_game_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_margin"
            android:padding="@dimen/button_padding"
            android:gravity="center"
            android:text="@string/home_activity_play_game"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            android:onClick="play_button_clicked"/>

        <TextView
            android:id="@+id/how_to_play_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:padding="@dimen/button_padding"
            android:gravity="center"
            android:text="@string/home_activity_how_to_play"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            android:onClick="how_to_play_button_clicked"/>

        <TextView
            android:id="@+id/rules_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/button_margin"
            android:padding="@dimen/button_padding"
            android:gravity="center"
            android:text="@string/home_activity_rules"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            android:onClick="rules_button_clicked"/>
    </LinearLayout>

</LinearLayout>